src/test/resources/private/typechecking/pass/return/pass02.jova
class Helper {

}

class A {

  public int fortyTwo() {
    return 42;
  }

  public string helloWorld() {
    return "Hello World!";
  }

  public bool returnTrue() {
    return true;
  }

  public Helper returnHelper() {
    Helper a;
    a = new Helper;
    return a;
  }

  public Helper returnParam(Helper a) {
      return a;
  }
}
