src/test/resources/private/typechecking/fail/this/this_06_forLocal.jova
class Helper {
}

class A {

    private int func0() {

        int a;
        string b;
        bool c;
        Helper d;

        this.a = 3;
        this.b = "b";
        this.c = true;
        this.d = new Helper;

        return 0;
    }
}